# ld-node-novatel-gnss-ins-2

./: .gitignore  .gitlab-ci.yml  .liam.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  DCO  Findserial.cmake  README.md  instance.json  specification.json
LICENSES/: MPL-2.0.txt
conda-recipe/: bld.bat  build.sh  conda_build_config_linux-aarch64.yaml  conda_build_config_linux-x86-64.yaml  conda_build_config_win-x86-64.yaml  meta.yaml
data/: data.fbs
src/: NovatelGNSSNode.cpp  NovatelGNSSNode.h  main.cpp
